Issue: add Scroll for too long list at mass update

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -4420,6 +4420,11 @@ div.markdown-preview {
        padding:10px 0;
        border-bottom:1px solid rgba(0,0,0,0.1);
    }
+
+   .mass-update-list {
+        max-height: 350px;
+        overflow-y: auto;
+   }
 }
 .fork-wrap {
     .project-from {
